# 3DMathAndPhysics

./: .gitignore  CMakeLists.txt  package-lock.json  package.json
App/: CMakeLists.txt
App/UI/: basicMotion.js  colors.js  index.html  level.js  lighting.js  main.js  materials.js  objects.js  package-lock.json  package.json  style.css
App/UI/public/: distortion.js
